feat: profile-tool-execution-binding